--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM Learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">DOM learning on Chai aur Code</h1>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM learning on Chai aur Code</h1>
         <p>Lorem ipsum dolor sit amet</p>
     </div>
 </body>
