--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -13,7 +13,18 @@
 <body class="bg-black">
     <div>
         <h1 id="title" class="heading">DOM learning on Chai aur Code</h1>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet</p>
+        <input type="password" name="" id="">
+        <ul>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">Four</li>
+        </ul>
     </div>
 </body>
 </html>
